Fix Channel scripting API's pixel data handling

Channel.pixelData and Channel.setPixelData were both broken.

BUG:475456